test/Conversions/smt_to_smtlib_unsupported.llzk
// RUN: llzk-opt --smt-to-smtlib -verify-diagnostics %s
// Purpose: result-producing smt.check export failures are checked with op-local diagnostics.

module {
  smt.solver () : () -> () {
    // expected-error @+1 {{cannot lower result-producing smt.check because SMT-LIB has no standard return channel from check-sat into later script terms}}
    %result = smt.check sat {
      %one = arith.constant 1 : i32
      smt.yield %one : i32
    } unknown {
      %two = arith.constant 2 : i32
      smt.yield %two : i32
    } unsat {
      %three = arith.constant 3 : i32
      smt.yield %three : i32
    } -> i32
    %unused = arith.constant 0 : i32
    smt.yield
  }
}
